# calculator

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/core/: Calculator.cpp  Calculator.h  ExpressionParser.cpp  ExpressionParser.h  OperationFactory.cpp  OperationFactory.h
src/core/AST/: BinaryNode.cpp  BinaryNode.h  FunctionNode.cpp  FunctionNode.h  Node.h  NumberNode.cpp  NumberNode.h  UnaryNode.cpp  UnaryNode.h
src/extensions/: CMakeLists.txt
src/extensions/CosExtension/: CosExtension.cpp
src/extensions/LogarithmExtension/: LogarithmExtension.cpp
src/extensions/PowerExtension/: PowerExtension.cpp
src/extensions/SinExtension/: SinExtension.cpp
src/extensions/UnaryMinusExtension/: UnaryMinusExtension.cpp
src/operations/: BuiltinOperations.cpp  BuiltinOperations.h  IOperation.h
src/operations/wrappers/: ExtensionOperationWrapper.cpp  ExtensionOperationWrapper.h
src/plugins/: DynamicLibrary.cpp  DynamicLibrary.h  ExtensionAPI.h  ExtensionRegistry.cpp  ExtensionRegistry.h  ExtensionUnit.cpp  ExtensionUnit.h  HostIntegration.cpp  HostIntegration.h  PluginManager.cpp  PluginManager.h
tests/: main.cpp  test_framework.h
tests/integration/: TestFullExpressions.cpp  TestPlugins.cpp
tests/mocks/: MockOperation.h
tests/unit/: TestAST.cpp  TestBuiltinOperations.cpp  TestCalculator.cpp  TestErrorHandling.cpp  TestExpressionParser.cpp
tests/utils/: TestHelpers.h
